--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "This is a project to practice, learn and understand puppeteer ❎ 🤖 to work with automatic tests 🧪",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "node index.js"
   },
   "repository": {
     "type": "git",
